--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h3>프로젝트</h3>
     <ul>
-        <li><a href="/outputs/pr.pptx">프로젝트 산출물</a> </li>
+        <li><a href="/outputs/88.PNG">프로젝트 산출물</a> </li>
         <li><a href="https://github.com/SHINEZ1/hmd.git">구현소스</a></li>
         <li><a href="">동영상</a></li>  <!--내 유튜브계정 링크걸기-->
     </ul>
